# realtimeTranslation

./: README.md  pyproject.toml
audio/: sample.m4a
logs/: 20250717_035437_bc1ee79f.json  20250717_040321_cce80cc3.json  20250717_044523_a330cf2b.json  20250717_045232_ae1e4282.json  20250717_051025_29d837f6.json  20250717_051149_180dd490.json  20250717_052049_f8042b45.json  20250717_052626_11978dd6.json  20250717_054837_75de23eb.json  20250717_055404_229fffd3.json
recordings/: 20250717_031753.txt
src/: batch_asr.py  check_voices.py  record_and_asr.py  streaming_asr.py  streaming_asr_non_realtime_translation.py  streaming_asr_realtime_translation.py  streaming_asr_realtime_tts.py  streaming_asr_translation.py  streaming_asr_with_logging.py
streaming_logs/: 20250717_033218.txt
